<resources>
    <string name="app_name">NC nutrition</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_foods">Foods</string>
    <string name="title_conditions">Conditions</string>
    <string name="title_deficiencies">Deficiencies</string>
    <string name="title_food">Food</string>
    <string name="title_condition">Condition</string>
    <string name="title_add_condition">Add Condition</string>
    <string name="title_add_food">Add Food</string>
    <string name="title_deficiency">Deficiency</string>
    <string name="title_add_deficiency">Add Deficiency</string>
    <string name="home_image">home image</string>
    <string name="welcome">Welcome!</string>
    <string name="view_all">View all</string>
    <string name="signs_and_symptoms">Signs and symptoms</string>
    <string name="description">Description</string>
    <string name="title_recipes">Recipes</string>
    <string name="kilocalories">Kilocalories</string>
    <string name="text_nutrients">Nutrients</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="saturday">Saturday</string>
    <string name="friday">Friday</string>
    <string name="sunday">Sunday</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Search for food…</string>
    <string name="search_title">Search</string>
    <string name="text_foods">foods</string>
    <string name="condition_description">Nutritional disease, any of the nutrient-related diseases and conditions that cause illness in humans. They may include deficiencies or excesses in the diet, obesity and eating disorders, and chronic diseases such as cardiovascular disease, hypertension, cancer, and diabetes mellitus. Nutritional diseases also include developmental abnormalities that can be prevented by diet, hereditary metabolic disorders that respond to dietary treatment, the interaction of foods and nutrients with drugs, food allergies and intolerance, and potential hazards in the food supply.</string>
    <string name="deficiency_description">Under-nutrition is a condition in which there is insufficient food to meet energy needs; its main characteristics include weight loss, failure to thrive, and wasting of body fat and muscle. Low birth weight in infants, inadequate growth and development in children, diminished mental function, and increased susceptibility to disease are among the many consequences of chronic persistent hunger, which affects those living in poverty in both industrialized and developing countries.</string>
    <string name="food_description">Food being one of human basic needs to be consumed daily, it has to be understood the amount of nutrients human body gains or losses at each consumption. Diseases rapidly attack the human body at any time and any point. Using food to prevent and treat most of nutritional diseases and most of the chronic diseases will safe human life at a great percentage. It is quite interesting that with eating well in terms of balanced nutrition and dietary is the fastest and cheapest way to solve the problem of diseases. Good health starts from home where good nutrition is served.</string>
    <string name="recipe_description">Encouraging dietary diversity by first appreciating local recipes is a key step in enhancing good nutrition at community level. This recipes is work that has taken into account diversity of lifestyles, cultures and food patterns of the various communities in Kenya. The recipes have been sampled from across the country and representatives from the different people groups provided guidance in the development of these recipes. They forms an initial step in promotion of good nutrition at community level by promoting and enhancing of local recipes. They will also be an important reference tool for teaching people and for nutrition education programs in the communities.</string>
    <string name="profile">Profile</string>
    <string name="title_meals">Meals</string>
    <string name="take_food">Day to Take</string>
    <string name="lunch">Meal</string>
    <string name="take">Take</string>
    <string name="remove_meal">Remove Meal</string>
    <string name="e_g_breakfast">e.g breakfast</string>
    <string name="title_meal">Meal</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_progress">Progress</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="recipe">Recipe</string>
    <string name="recipe_tabs">Recipe Tabs</string>
    <string name="time">Time</string>
    <string name="title_ingredients">Ingredients</string>
    <string name="title_directions">Directions</string>
    <string name="proximate">Proximate</string>
    <string name="minerals">Minerals</string>
    <string name="vitamins">Vitamins</string>
    <string name="cholesterol">Cholesterol</string>
    <string name="energies">Energies</string>
    <string name="search_not_found">search  not found</string>
    <string name="bmi">BMI</string>
    <string name="weight_in_kg">Weight in Kg</string>
    <string name="_50kgs">50kgs</string>
    <string name="tools">Tools</string>
    <string name="_167cm">167cm</string>
    <string name="height_in_cm">Height in cm</string>
    <string name="measure_bmi">Measure BMI</string>
    <string name="deficiency_function">Deficiency Function</string>
    <string name="deficiency_signs_and_symptoms">Signs and Symptoms</string>
    <string name="energies_per_100g">Energies per 100g</string>
    <string name="energy_in_kj">Energy in KJ</string>
    <string name="energy_in_kilocalories">Energy in Kilocalories</string>
    <string name="nutrition_details">Nutrition Details</string>
    <string name="proximate_per_100g">Proximate per 100g</string>
    <string name="water_in_g">Water in g</string>
    <string name="protein_in_g">Protein in g</string>
</resources>