<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        app:showAsAction="withText" />

    <!--    <item-->
    <!--        android:id="@+id/navigation_notifications"-->
    <!--        android:icon="@drawable/ic_notifications_black_24dp"-->
    <!--        android:title="@string/title_notifications" />-->
    <item
        android:id="@+id/navigation_conditions"
        android:icon="@drawable/ic_baseline_medical_information_24"
        android:title="@string/title_conditions"
        app:showAsAction="withText" />

    <item
        android:id="@+id/navigation_deficiencies"
        android:icon="@drawable/ic_baseline_sick_24"
        android:title="@string/title_deficiencies"
        app:showAsAction="withText" />
    <item
        android:id="@+id/navigation_foods"
        android:icon="@drawable/ic_baseline_food_bank_24"
        android:title="@string/title_foods"
        app:showAsAction="withText" />
    <item
        android:id="@+id/navigation_recipes"
        android:icon="@drawable/ic_baseline_receipt_long_24"
        android:title="@string/title_recipes"
        app:showAsAction="withText" />
</menu>