<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.ncnutrition.ui.home.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/foodFragment"
        android:name="com.example.ncnutrition.ui.foods.fragment.FoodFragment"
        android:label="@string/title_food"
        tools:layout="@layout/fragment_food">

        <argument
            android:name="code"
            app:argType="string" />
        <action
            android:id="@+id/action_foodFragment_to_navigation_meals"
            app:destination="@id/navigation_meals" />
    </fragment>
    <fragment
        android:id="@+id/addFoodFragment"
        android:name="com.example.ncnutrition.ui.foods.fragment.AddFoodFragment"
        android:label="@string/title_add_food"
        tools:layout="@layout/fragment_add_food" />
    <fragment
        android:id="@+id/navigation_foods"
        android:name="com.example.ncnutrition.ui.foods.fragment.FoodsFragment"
        android:label="@string/title_foods"
        tools:layout="@layout/fragment_foods_list">
        <action
            android:id="@+id/action_foodsFragment_to_foodFragment"
            app:destination="@id/foodFragment" />
        <action
            android:id="@+id/action_navigation_foods_to_addFoodFragment"
            app:destination="@id/addFoodFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_conditions"
        android:name="com.example.ncnutrition.ui.conditions.fragment.ConditionsFragment"
        android:label="@string/title_conditions"
        tools:layout="@layout/fragment_conditions_list">
        <action
            android:id="@+id/action_conditionsFragment_to_conditionFragment"
            app:destination="@id/conditionFragment" />
        <action
            android:id="@+id/action_navigation_conditions_to_addConditionFragment"
            app:destination="@id/addConditionFragment" />
        <action
            android:id="@+id/action_navigation_conditions_to_addConditionFragment2"
            app:destination="@id/addConditionFragment" />
    </fragment>
    <fragment
        android:id="@+id/conditionFragment"
        android:name="com.example.ncnutrition.ui.conditions.fragment.ConditionFragment"
        android:label="@string/title_condition"
        tools:layout="@layout/fragment_condition">
        <argument
            android:name="id"
            app:argType="integer" />
        <action
            android:id="@+id/action_conditionFragment_to_foodFragment"
            app:destination="@id/foodFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_deficiencies"
        android:name="com.example.ncnutrition.ui.deficiencies.fragment.DeficienciesFragment"
        android:label="@string/title_deficiencies"
        tools:layout="@layout/fragment_deficiencies_list" >
        <action
            android:id="@+id/action_navigation_deficiencies_to_deficiencyFragment"
            app:destination="@id/deficiencyFragment" />
        <action
            android:id="@+id/action_navigation_deficiencies_to_addDeficiencyFragment"
            app:destination="@id/addDeficiencyFragment" />
    </fragment>
    <fragment
        android:id="@+id/addConditionFragment"
        android:name="com.example.ncnutrition.ui.conditions.fragment.AddConditionFragment"
        android:label="@string/title_add_condition"
        tools:layout="@layout/fragment_add_condition" />
    <fragment
        android:id="@+id/deficiencyFragment"
        android:name="com.example.ncnutrition.ui.deficiencies.fragment.DeficiencyFragment"
        android:label="@string/title_deficiency"
        tools:layout="@layout/fragment_deficiency" >
        <argument
            android:name="id"
            app:argType="integer" />
        <action
            android:id="@+id/action_deficiencyFragment_to_foodFragment"
            app:destination="@id/foodFragment" />
    </fragment>
    <fragment
        android:id="@+id/addDeficiencyFragment"
        android:name="com.example.ncnutrition.ui.deficiencies.fragment.AddDeficiencyFragment"
        android:label="@string/title_add_deficiency"
        tools:layout="@layout/fragment_add_deficiency" />
    <fragment
        android:id="@+id/navigation_meals"
        android:name="com.example.ncnutrition.ui.mealTable.fragment.MealsFragment"
        android:label="@string/title_meals"
        tools:layout="@layout/fragment_meals_list" >
        <action
            android:id="@+id/action_navigation_meals_to_mealFragment2"
            app:destination="@id/mealFragment" />
        <action
            android:id="@+id/action_navigation_meals_to_recipeFragment"
            app:destination="@id/recipeFragment" />
    </fragment>
    <fragment
        android:id="@+id/mealFragment"
        android:name="com.example.ncnutrition.ui.mealTable.fragment.MealFragment"
        android:label="@string/title_meal"
        tools:layout="@layout/fragment_meal" >
        <argument
            android:name="date"
            app:argType="long" />
    </fragment>
    <fragment
        android:id="@+id/navigation_progress"
        android:name="com.example.ncnutrition.ui.mealTable.fragment.ProgressFragment"
        android:label="@string/title_progress"
        tools:layout="@layout/fragment_progress" />
    <fragment
        android:id="@+id/navigation_recipes"
        android:name="com.example.ncnutrition.ui.recipes.fragment.RecipesFragment"
        android:label="@string/title_recipes"
        tools:layout="@layout/fragment_recipes_list" >
        <action
            android:id="@+id/action_navigation_recipes_to_recipeFragment"
            app:destination="@id/recipeFragment" />
    </fragment>
    <fragment
        android:id="@+id/recipeFragment"
        android:name="com.example.ncnutrition.ui.recipes.fragment.RecipeFragment"
        android:label="@string/recipe"
        tools:layout="@layout/fragment_recipe">
        <argument
            android:name="code"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/navigation_tools"
        android:name="com.example.ncnutrition.ui.tools.fragment.ToolsFragment"
        android:label="@string/tools"
        tools:layout="@layout/fragment_tools" >
        <action
            android:id="@+id/action_navigation_tools_to_conditionFragment"
            app:destination="@id/conditionFragment" />
    </fragment>
</navigation>