<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.recipes.fragment.RecipeFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageViewRecipe"
            android:layout_width="match_parent"
            android:layout_height="275dp"
            android:contentDescription="@string/recipe_image"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_foreground" />


        <TextView
            android:id="@+id/textViewRecipeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/recipe" />

        <TextView
            android:id="@+id/textViewDishDescriptionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/description" />


        <TextView
            android:id="@+id/textViewDishDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/description" />

        <TextView
            android:id="@+id/textViewDishTimeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/time" />

        <TextView
            android:id="@+id/textViewDishTimeP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/time" />

        <TextView
            android:id="@+id/textViewIngredientsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/title_ingredients" />

        <TextView
            android:id="@+id/textViewIngredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/title_ingredients" />

        <TextView
            android:id="@+id/textViewDirectionsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/title_directions" />

        <TextView
            android:id="@+id/textViewDirections"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/large_text" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>